--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "react": "18.1.0",
     "react-native": "0.70.4",
-    "@reduxjs/toolkit": "^1.8.6",
+    "react-native-gesture-handler": "^2.15.0",
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
