--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^1.8.6",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.8.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
     "react-redux": "^8.0.2"
   },
   "devDependencies": {
