--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "^1.6.7",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-gesture-handler": "^2.15.0",
